# impfic-core

./: .gitignore  Pipfile  README.md  classify_tense_aspect.py  pyproject.toml  settings.py  settings_example.py
.github/workflows/: python-package.yml
impfic_core/: api.py  secrets_example.py
impfic_core/analysis/: prep_word2vec_emotion_recognition.py
impfic_core/extract/: extract_stats.py  extract_trankit.py
impfic_core/fetch/: fetch_elastic.py
impfic_core/map/: map_genre.py  map_isbns.py
impfic_core/measures/: dispersion.py  fractality.py  keyness.py  length.py  text_features.py
impfic_core/parse/: book_model.py  chunk.py  doc.py  parse_alpino_sentence.py  parse_book_metadata.py  parse_epub.py  parse_review.py  parse_trankit_sentence.py  pronouns.py
impfic_core/pattern/: patterns.py  patterns_nl.py  tag_sets.py  tag_sets_de.py  tag_sets_en.py  tag_sets_nl.py
impfic_core/plot/: plot.py
impfic_core/resources/: rbn.py
parse/: parse_alpino_sentence.py
tests/: rbn_test.py  rbn_test_data.json  spacy_test_data.docbin  test_dispersion.py  test_extract_trankit.py  test_parse_chunk.py  test_parse_doc.py  test_parse_epub.py  test_patterns_nl.py  trankit_test_data-1.json
