[tool.poetry]
name = "impfic-core"
version = "0.1.1-alpha.0"
description = "Utility functions for the Impact and Fiction project"
authors = ["Marijn Koolen <marijn.koolen@huygens.knaw.nl>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/impact-and-fiction/impfic-core"
repository = "https://github.com/impact-and-fiction/impfic-core"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "impfic-core" }]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pandas = ">=1.2.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/impact-and-fiction/impfic-core/issues"

[tool.poetry.scripts]
version = 'poetry_scripts:version'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"